k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-demo
  labels:
    name: devops-demo
    purpose: ci-cd-demo
